2005-01-12  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/clib/native/ByteToCharIconv.c
	(Java_kaffe_io_ByteToCharIconv_convert):
	Check buffer overflow in the same way I did in CharToByteIconv.c.

2005-01-12  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/clib/native/CharToByteIconv.c
	(Java_kaffe_io_CharToByteIconv_convert):
	Check whether errno == EILSEQ.

	* libraries/javalib/all.files:
	Add kaffe/libraries/javalib/kaffe/io/KaffeCharset.java and
	kaffe/libraries/javalib/kaffe/io/KaffeCharsetProvider.java.

	* libraries/javalib/gnu/java/nio/channels/FileChannelImpl.java
	(write(ByteBuffer)): Move the position of the source buffer forward.

	* kaffe/libraries/javalib/kaffe/io/KaffeCharset.java:
	Initial bugs fixed.

2005-01-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/gnu/java/io/EncodingManager.java
	(getEncoder, getDecoder): Clarified the true origin of the error in
	the encoding manager.

	* libraries/javalib/Klasses.jar.bootstrap: Regenerated.

2005-01-11  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-09  Mark Wielaard  <mark@klomp.org>

	* java/security/AlgorithmParameterGenerator.java (getInstance):
	Mention provider when throwing NoSuchProviderException.
	* java/security/AlgorithmParameters.java (getInstance): Likewise.
	* java/security/KeyFactory.java (getInstance): Likewise.
	* java/security/KeyStore.java (getInstance): Likewise.
	* java/security/SecureRandom.java (getInstance): Likewise.
	* java/security/cert/CertificateFactory.java (getInstance): Likewise.
	
2005-01-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* Makefile.am: Fixed BUILD_ENVIRONMENT generation.

	* Makefile.in: Regenerated.

2005-01-10  Ito Kazumitsu  < kaz@maczuka.gcd.org>

	* kaffe/libraries/javalib/kaffe/io/KaffeCharset.java,
	kaffe/libraries/javalib/kaffe/io/KaffeCharsetProvider.java:
	New files.

2005-01-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/external.c